--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,8 +1,15 @@
 ---
 title: Overview
 description: "Start Managing All Your Energy in One Place"
+title: Overview
+description: "Start Managing All Your Energy in One Place"
 ---
 
+# What is VoltView?
+
+VoltView is a comprehensive energy intelligence platform that helps you future-proof your commercial property portfolio while optimising operational costs. Our platform automates data collection and analysis, enabling property owners, managers, and energy consultants to make strategic decisions that enhance asset value and reduce expenses.
+
+## Key Features
 # What is VoltView?
 
 VoltView is a comprehensive energy intelligence platform that helps you future-proof your commercial property portfolio while optimising operational costs. Our platform automates data collection and analysis, enabling property owners, managers, and energy consultants to make strategic decisions that enhance asset value and reduce expenses.
@@ -13,31 +20,45 @@ VoltView is a comprehensive energy intelligence platform that helps you future-p
   <Card
     title="Unified Data Integration"
     icon="database"
+    title="Unified Data Integration"
+    icon="database"
   >
+    Streamline operations by automatically collecting and analysing data from Smart Metres, Government Databases, Utility Suppliers, EPCs, and Building Profiles
     Streamline operations by automatically collecting and analysing data from Smart Metres, Government Databases, Utility Suppliers, EPCs, and Building Profiles
   </Card>
   <Card
     title="Compliance Forecasting"
     icon="chart-line"
+    title="Compliance Forecasting"
+    icon="chart-line"
   >
+    Stay ahead of regulations with clear, actionable roadmaps to meet MEES requirements, including the mandatory EPC 'C' rating by 2027 and 'B' rating by 2030
     Stay ahead of regulations with clear, actionable roadmaps to meet MEES requirements, including the mandatory EPC 'C' rating by 2027 and 'B' rating by 2030
   </Card>
   <Card
     title="Cost Optimisation"
-    icon="coins">
+    icon="coins"
+  >
     Identify energy inefficiencies, optimise procurement, and reduce accounting overhead
   </Card>
   <Card
     title="Portfolio Intelligence"
     icon="building"
+    title="Portfolio Intelligence"
+    icon="building"
   >
+    Gain comprehensive visibility across your entire commercial property portfolio with building-specific insights
     Gain comprehensive visibility across your entire commercial property portfolio with building-specific insights
   </Card>
   <Card
     title="Automated Reporting"
     icon="file-lines"
+    title="Automated Reporting"
+    icon="file-lines"
   >
+    Generate compliance-ready documentation and forecasting for stakeholders, regulators, and internal teams
     Generate compliance-ready documentation and forecasting for stakeholders, regulators, and internal teams
   </Card>
 </CardGroup>
+
 
