Refactor Card component styling in introduction.mdx

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -37,8 +37,7 @@ VoltView is a comprehensive energy intelligence platform that helps you future-p
   </Card>
   <Card
     title="Cost Optimisation"
-    icon="coins"
-  >
+    icon="coins">
     Identify energy inefficiencies, optimise procurement, and reduce accounting overhead
   </Card>
   <Card
