Update documentation text files

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,43 @@
 ---
-title: Introduction
-description: "Welcome to the home of your new documentation"
+title: Overview
+description: "Start Managing All Your Energy in One Place"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+# What is VoltView?
 
-## Setting up
+VoltView is a comprehensive energy intelligence platform that helps you future-proof your commercial property portfolio while optimising operational costs. Our platform automates data collection and analysis, enabling property owners, managers, and energy consultants to make strategic decisions that enhance asset value and reduce expenses.
 
-The first step to world-class documentation is setting up your editing environments.
+## Key Features
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
+    title="Unified Data Integration"
+    icon="database"
   >
-    Get your docs set up locally for easy development
+    Streamline operations by automatically collecting and analysing data from Smart Metres, Government Databases, Utility Suppliers, EPCs, and Building Profiles
   </Card>
   <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
+    title="Compliance Forecasting"
+    icon="chart-line"
   >
-    Preview your changes before you push to make sure they're perfect
+    Stay ahead of regulations with clear, actionable roadmaps to meet MEES requirements, including the mandatory EPC 'C' rating by 2027 and 'B' rating by 2030
+  </Card>
+  <Card
+    title="Cost Optimisation"
+    icon="coins">
+    Identify energy inefficiencies, optimise procurement, and reduce accounting overhead
+  </Card>
+  <Card
+    title="Portfolio Intelligence"
+    icon="building"
+  >
+    Gain comprehensive visibility across your entire commercial property portfolio with building-specific insights
+  </Card>
+  <Card
+    title="Automated Reporting"
+    icon="file-lines"
+  >
+    Generate compliance-ready documentation and forecasting for stakeholders, regulators, and internal teams
   </Card>
 </CardGroup>
 
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
