Update introduction page with new hero image and refined platform description
- Add hero image for VoltView platform dashboard
- Refine platform description to emphasize energy management and compliance
- Correct "Smart Metres" to "Smart Meters" spelling

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,9 +3,12 @@ title: Overview
 description: "Start Managing All Your Energy in One Place"
 ---
 
+![VoltView Platform Dashboard](/images/hero-dark.png)
+
 # What is VoltView?
 
-VoltView is a comprehensive energy intelligence platform that helps you future-proof your commercial property portfolio while optimising operational costs. Our platform automates data collection and analysis, enabling property owners, managers, and energy consultants to make strategic decisions that enhance asset value and reduce expenses.
+VoltView is a comprehensive energy intelligence platform that streamlines your energy management, procurement, and accounting needs. Our platform automates data collection and analysis, helping property owners, managers, and consultants make strategic decisions that reduce operational costs and meet EPC requirements.
+
 
 ## Key Features
 
@@ -14,7 +17,7 @@ VoltView is a comprehensive energy intelligence platform that helps you future-p
     title="Unified Data Integration"
     icon="database"
   >
-    Streamline operations by automatically collecting and analysing data from Smart Metres, Government Databases, Utility Suppliers, EPCs, and Building Profiles
+    Streamline operations by automatically collecting and analysing data from Smart Meters, Government Databases, Utility Suppliers, EPCs, and Building Profiles
   </Card>
   <Card
     title="Compliance Forecasting"
