Update carbon emissions unit notation in API reference
- Change carbon emissions unit from "kg CO2e/tonnes CO2e" to "kg CO2eq"
- Maintain consistency in standardized units table

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -81,7 +81,7 @@ The VoltView API uses the following standardized units across all endpoints:
 |--------|------|
 | Energy Consumption | kWh |
 | Power Demand | kW |
-| Carbon Emissions | kg CO2e/tonnes CO2e |
+| Carbon Emissions | kg CO2eq |
 | Currency | GBP (£) |
 | Time Series | ISO 8601 format |
 | Numeric Values | Rounded to 2 decimal places |
