Update introduction page hero image with noZoom attribute
- Replace hero image with an img tag
- Add noZoom attribute to prevent image zooming

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,7 +3,7 @@ title: Overview
 description: "Start Managing All Your Energy in One Place"
 ---
 
-![VoltView Platform Dashboard](/images/hero-dark.png)
+<img src="/images/hero-dark.png" alt="VoltView Platform Dashboard" noZoom />
 
 # What is VoltView?
 
