--- a/api-reference/integration/get-business-accounts-count.mdx
+++ b/api-reference/integration/get-business-accounts-count.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: get /v1/business/{businessId}/accounts/count
+openapi: get /v1/supplierIntegration/business/{businessId}/accounts/count
 ---
