Remove deprecated project creation endpoint and update related documentation
- Delete the 'Create a Project' endpoint from the OpenAPI specification and corresponding MDX documentation.
- Adjust the introduction documentation to reflect the removal of the project creation step, streamlining the API usage instructions.

--- a/api-reference/integration/introduction.mdx
+++ b/api-reference/integration/introduction.mdx
@@ -19,16 +19,14 @@ The Supplier Integration API provides automated data collection functionality fr
 
 To start using the Supplier Integration API, you'll need to:
 
-1. Create a Project using the [Create a Project](/api-reference/integration/create-project) endpoint
-2. Add utility accounts with the [Create an Account](/api-reference/integration/create-account) endpoint
-3. Connect to your utility provider's website using your saved credentials
-4. Set up callback notifications to receive updates when new data is retrieved
+1. Add utility accounts with the [Create an Account](/api-reference/integration/create-account) endpoint
+2. Connect to your utility provider's website using your saved credentials
+3. Access your utility data through the API endpoints
 
 ## Available Endpoints
 
 The Supplier Integration API provides the following endpoints:
 
-- **Project Management**: Create and manage integration projects
 - **Account Management**: Securely store and manage utility provider credentials
 - **Site Management**: Access utility site information linked to your accounts
 - **Document Access**: Retrieve and view utility bills and contracts
