Update introduction documentation for VoltView API
- Simplify the getting started section by replacing the step-by-step instructions with a direct registration link for obtaining API credentials.
- Ensure clarity and accessibility of information for new users.

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -52,13 +52,7 @@ Our API suite includes the following core services:
 
 ## Getting Started
 
-To start using the VoltView API, follow these steps:
-
-1. Sign up for a VoltView account to receive your API credentials
-2. Review our data granularity options (hourly/daily/monthly)
-3. Ensure your requests are sent via HTTPS
-
-All API responses are returned in JSON format.
+Register for a VoltView account to receive your API credentials [**__here__**](https://docs.voltview.co.uk/register).
 
 ## Authentication
 
